crates/shell-syntax/tests/snapshots/highlight_tests__highlight_and_operator.snap
---
source: crates/shell-syntax/tests/highlight_tests.rs
expression: highlights
---
[
    HighlightedSpan {
        start: 0,
        end: 2,
        kind: Command,
    },
    HighlightedSpan {
        start: 3,
        end: 5,
        kind: Operator,
    },
    HighlightedSpan {
        start: 6,
        end: 10,
        kind: Builtin,
    },
    HighlightedSpan {
        start: 11,
        end: 15,
        kind: Argument,
    },
]
