crates/shell-syntax/tests/snapshots/highlight_tests__highlight_command_not_found.snap
---
source: crates/shell-syntax/tests/highlight_tests.rs
expression: highlights
---
[
    HighlightedSpan {
        start: 0,
        end: 11,
        kind: CommandNotFound,
    },
    HighlightedSpan {
        start: 12,
        end: 18,
        kind: Flag,
    },
]
