crates/shell-syntax/tests/snapshots/highlight_tests__highlight_comment.snap
---
source: crates/shell-syntax/tests/highlight_tests.rs
expression: highlights
---
[
    HighlightedSpan {
        start: 0,
        end: 2,
        kind: Command,
    },
    HighlightedSpan {
        start: 3,
        end: 22,
        kind: Comment,
    },
]
