crates/shell-syntax/tests/snapshots/highlight_tests__highlight_executable_path.snap
---
source: crates/shell-syntax/tests/highlight_tests.rs
expression: highlights
---
[
    HighlightedSpan {
        start: 0,
        end: 11,
        kind: Command,
    },
]
